Use Collections.emptyMap() instead of Map.of()